@@ -592,4 +592,12 @@ class ShopCapabilities extends ShopCapabilitiesBase
         }
         return parent::getLink($linkType);
     }
+
+    /**
+     * {@inheritdoc}
+     */
+    public function hasInvoiceStatusScreen()
+    {
+        return true;
+    }
 }
